erDiagram
    Vulnerabilities ||--o{ Affections : "содержит"
    Packages ||--o{ Affections : "затронут"

    Vulnerabilities {
        int pk_id PK
        string id
        string summary
        timestamp published
        timestamp withdrawn
        jsonb aliases
        string upstream
        jsonb related
        float severity "из severity:score"
        string cwe_id "из database_specific"
        string severity_text "из database_specific"
    }

    Packages {
        int pk_id PK
        string id
        string ecosystem
        string name
    }

    Affections {
        int vuln_id FK
        int pack_id FK
        string severity "из affected"
        bytea ranges "raw data (binary)"
    }
